# rule30

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.envd
.github/workflows/: pyo3.yml  python.yml  release.yml  rust.yml
python/: Cargo.toml  README.md  pyproject.toml
python/rule30/: __init__.py  rand.py
python/src/: lib.rs
python/tests/: test_rand.py
src/: extended_ca.rs  lib.rs  prelude.rs  rule30.rs
