[package]
name = "rule30"
version = "0.1.0"
edition = "2021"
authors = ["Keming <kemingy94@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kemingy/rule30"
description = "Pseudo random number generator with cellular automaton rule 30."
documentation = "https://docs.rs/rule30"
keywords = ["random", "rng", "rule30", "cellular automaton"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"
