[package]
name = "rule30py"
publish = false
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rule30py"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
pyo3 = { version = "0.23", features = ["abi3-py39"] }
rand = "0.8.5"
rule30 = { path = "../" }
