[package]
name = "rule30py"
publish = false
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rule30py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py39"] }
rand = "0.9.0"
rule30 = { path = "../" }
