[package]
name = "rule30py"
publish = false
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rule30py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py310"] }
rule30 = { path = "../" }
