[project]
name = "rule30py"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "Apache-2.0"

[project.urls]
documentation = "https://github.com/kemingy/rule30"
repository = "https://github.com/kemingy/rule30"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
# as a submodule
module-name = "rule30.rule30py"
features = ["pyo3/extension-module"]
include = ["README.md"]
exclude = ["tests/**/*"]

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]
